[tool.poetry]
name = "great-expectations-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "APACHE LICENSE, VERSION 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
