[tool.poetry]
name = "great-expectations-tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "APACHE LICENSE, VERSION 2.0"

[tool.poetry.dependencies]
python = "^3.9"
great-expectations = "^0.15.4"
mistune = ">=0.8.4,<2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
